--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.2",
+    "contentful": "^8.1.8",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
