:sparkles: Update README with include information

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "contentful-graphql-vs-rest",
+  "author": "Salma Alam-Naylor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
